completed user sign up flow

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -84,8 +84,8 @@
 		                    <li style = "margin: 0;line-height: 1.7em;"><label  style="display:inline-block;width:90px;padding-right: 10px;text-align: right;font-style:normal;font-weight:bold;">Version:</label>#= version #</li>						
 							<li style = "margin: 0;line-height: 1.7em;"> 
 							   <span id="gauge-container">
-	                				<span id="gauge#= name #" style="display:inline-block;">HostMMy</span>
-	                				<span style="display:inline-block;" id="osgauge#= name #">CPUUsage</span>
+	                				<span id="gauge#= userName #" style="display:inline-block;">HostMMy</span>
+	                				<span style="display:inline-block;" id="osgauge#= userName #">CPUUsage</span>
 								</span>
 							   <span id="gauge-label" style= "display:block;">
 	                				<span id="" style="display:inline-block;margin-left:5%;width:17%;">HostMemory</span>
@@ -164,7 +164,7 @@
 		                    schema: {
 		                        model: {
 		                            fields: {
-		                                name: { type: "string" },
+		                                userName: { type: "string" },
 		                                guestOSName: { type: "string" },
 		                                ip: { type: "string" },
 		                                powerState: { type: "string" }
@@ -184,7 +184,7 @@
 		                detailTemplate: kendo.template($("#template").html()),
 		                detailExpand: detailExpand,
 		                columns: [
-		                    { field: "name", title: "Name", width: "130px" },
+		                    { field: "userName", title: "Name", width: "130px" },
 		                    { field: "guestOSName", title: "OS", width: "130px" },
 		                    { field: "ip", title: "IP", width: "130px" },
 		                    { field: "powerState", title: "Message", width: "130px", template: "#= showColorText(data) #" }
@@ -201,8 +201,8 @@
 		        	var detailRow = e.detailRow;
 		        	console.log(data.hostMemoryUsage);
 		        	console.log(data.overallCPUUsage);
-	                createGauge(data.hostMemoryUsage, data.name);
-	                createOSGauge(data.overallCPUUsage, data.name);
+	                createGauge(data.hostMemoryUsage, data.userName);
+	                createOSGauge(data.overallCPUUsage, data.userName);
 	                detailRow.find(".tabstrip").kendoTabStrip({
 	                    animation: {
 	                        open: { effects: "fadeIn" }
@@ -273,8 +273,8 @@
 			        }
 
 			        
-			        function createGauge(hostMemoryUsage, name) {
-	                    $("#gauge"+name).kendoRadialGauge({
+			        function createGauge(hostMemoryUsage, userName) {
+	                    $("#gauge"+userName).kendoRadialGauge({
 
 	                        pointer: {
 	                            value: hostMemoryUsage
@@ -304,8 +304,8 @@
 	                        }
 	                    });
 	                }
-			        function createOSGauge(overallCPUUsage, name) {
-	                    $("#osgauge"+name).kendoRadialGauge({
+			        function createOSGauge(overallCPUUsage, userName) {
+	                    $("#osgauge"+userName).kendoRadialGauge({
 
 	                        pointer: {
 	                            value: overallCPUUsage
