--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -72,22 +72,23 @@
 							
 							<form method="post" action="#" th:action="@{/dashboard}" th:object="${dashboard}">
                                 <div class="top-margin">
-                                    <span role="alert" class="text-danger" name="err"></span>
+                                    <span role="alert" class="text-danger" userName="err"></span>
                                 </div>
 
 								<div class="top-margin">
 									<label>Username <span class="text-danger">*</span></label>
-									<input type="name" class="form-control" name="name" />
+									<input type="userName" class="form-control" userName="userName" />
 								</div>
 								<div class="top-margin">
 									<label>Password <span class="text-danger">*</span></label>
-									<input type="password" class="form-control" name="password" />
+									<input type="password" class="form-control" userName="password" />
 								</div>
 
 								<hr />
 
 								<div class="row">
-									<div class="col-lg-8">
+									<div class="col-lg-8 text-left">
+										<button class="btn btn-action"><a href="/signup">Sign Up</a></button>
 									</div>
 									<div class="col-lg-4 text-right">
 										<button class="btn btn-action" type="submit">Sign in</button>
