--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -72,16 +72,16 @@
 							
 							<form method="post" action="#" th:action="@{/dashboard}" th:object="${dashboard}">
                                 <div class="top-margin">
-                                    <span role="alert" class="text-danger" userName="err"></span>
+                                    <span role="alert" class="text-danger" name="err"></span>
                                 </div>
 
 								<div class="top-margin">
 									<label>Username <span class="text-danger">*</span></label>
-									<input type="userName" class="form-control" userName="userName" />
+									<input type="userName" class="form-control" name="userName" />
 								</div>
 								<div class="top-margin">
 									<label>Password <span class="text-danger">*</span></label>
-									<input type="password" class="form-control" userName="password" />
+									<input type="password" class="form-control" name="password" />
 								</div>
 
 								<hr />
