fixed the seesion management and authentication

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a class="btn" href="/login">Sign out</a></li>
+					<li class="active"><a class="btn" href="/signout">Sign out</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
