--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,15 +69,13 @@
 						<div class="panel-body">
 							<h3 class="thin text-center">Sign in to your account</h3>
 							<hr />
-							
-							<form method="post" action="#" th:action="@{/dashboard}" th:object="${dashboard}">
-                                <div class="top-margin">
-                                    <span role="alert" class="text-danger" name="err"></span>
-                                </div>
+						
+							<div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error}"></div>
+							<form method="post" action="#" th:action="@{/auth}">
 
 								<div class="top-margin">
 									<label>Username <span class="text-danger">*</span></label>
-									<input type="userName" class="form-control" name="userName" />
+									<input type="text" class="form-control" name="userName" />
 								</div>
 								<div class="top-margin">
 									<label>Password <span class="text-danger">*</span></label>
